{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 36,
  "lineage": "2afc5ce3-434e-fd80-3852-2bd0a0e48825",
  "resources": [
    {
      "module": "module.webserver_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:470657683332:vpc/vpc-04f2e8a8c629b958a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02bc6ce693dc8dc0c",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-08d7d8810d07d6b13",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04f2e8a8c629b958a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08bc37707fbfceaf9",
            "owner_id": "470657683332",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:loadbalancer/app/webservers-production-alb/1dac635b320109dc",
            "arn_suffix": "app/webservers-production-alb/1dac635b320109dc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webservers-production-alb-1917857571.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:loadbalancer/app/webservers-production-alb/1dac635b320109dc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webservers-production-alb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-068e87a741fa90aba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02034380894f5f323"
              },
              {
                "subnet_id": "subnet-0ac73ebee57540b52"
              },
              {
                "subnet_id": "subnet-0be40b560c5a4825c"
              }
            ],
            "subnets": [
              "subnet-02034380894f5f323",
              "subnet-0ac73ebee57540b52",
              "subnet-0be40b560c5a4825c"
            ],
            "tags": {
              "Name": "webservers-production-port-alb"
            },
            "tags_all": {
              "Name": "webservers-production-port-alb"
            },
            "vpc_id": "vpc-04f2e8a8c629b958a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:loadbalancer/app/webservers-production-alb/1dac635b320109dc"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.aws_subnet.public_a",
            "module.webserver_cluster.aws_subnet.public_b",
            "module.webserver_cluster.aws_subnet.public_c",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:listener/app/webservers-production-alb/1dac635b320109dc/c3f48f65433dcf9b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:targetgroup/webservers-production-tg/ba26a12103553774",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:listener/app/webservers-production-alb/1dac635b320109dc/c3f48f65433dcf9b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:loadbalancer/app/webservers-production-alb/1dac635b320109dc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:listener/app/webservers-production-alb/1dac635b320109dc/c3f48f65433dcf9b"
          },
          "dependencies": [
            "module.webserver_cluster.aws_lb.app_alb",
            "module.webserver_cluster.aws_lb_target_group.app_tg",
            "module.webserver_cluster.aws_security_group.alb_sg",
            "module.webserver_cluster.aws_subnet.public_a",
            "module.webserver_cluster.aws_subnet.public_b",
            "module.webserver_cluster.aws_subnet.public_c",
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:targetgroup/webservers-production-tg/ba26a12103553774",
            "arn_suffix": "targetgroup/webservers-production-tg/ba26a12103553774",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:targetgroup/webservers-production-tg/ba26a12103553774",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webservers-production-tg",
            "port": 3025,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "webservers-production-lb-tg"
            },
            "tags_all": {
              "Name": "webservers-production-lb-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04f2e8a8c629b958a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:470657683332:targetgroup/webservers-production-tg/ba26a12103553774"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:470657683332:security-group/sg-068e87a741fa90aba",
            "description": "Allow HTTP inbound to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068e87a741fa90aba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "webservers-production-alb-sg",
            "name_prefix": "",
            "owner_id": "470657683332",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webservers-production-alb-sg"
            },
            "tags_all": {
              "Name": "webservers-production-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2e8a8c629b958a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470657683332",
            "id": "sg-068e87a741fa90aba",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:470657683332:security-group/sg-02e78cb19488759e5",
            "description": "Allow traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e78cb19488759e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068e87a741fa90aba"
                ],
                "self": false,
                "to_port": 3025
              }
            ],
            "name": "webservers-production-instance-sg",
            "name_prefix": "",
            "owner_id": "470657683332",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webservers-production-instance-sg"
            },
            "tags_all": {
              "Name": "webservers-production-instance-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-04f2e8a8c629b958a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470657683332",
            "id": "sg-02e78cb19488759e5",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.webserver_cluster.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:470657683332:subnet/subnet-0be40b560c5a4825c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.108.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be40b560c5a4825c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470657683332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "webservers-production-public-a"
            },
            "tags_all": {
              "Name": "webservers-production-public-a"
            },
            "vpc_id": "vpc-04f2e8a8c629b958a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470657683332",
            "id": "subnet-0be40b560c5a4825c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:470657683332:subnet/subnet-02034380894f5f323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.109.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02034380894f5f323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470657683332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "webservers-production-public-b"
            },
            "tags_all": {
              "Name": "webservers-production-public-b"
            },
            "vpc_id": "vpc-04f2e8a8c629b958a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470657683332",
            "id": "subnet-02034380894f5f323",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.webserver_cluster",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "module.webserver_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:470657683332:subnet/subnet-0ac73ebee57540b52",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "172.31.110.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ac73ebee57540b52",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470657683332",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "webservers-production-public-c"
            },
            "tags_all": {
              "Name": "webservers-production-public-c"
            },
            "vpc_id": "vpc-04f2e8a8c629b958a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "470657683332",
            "id": "subnet-0ac73ebee57540b52",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.webserver_cluster.data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}